<resources>
    <string name="app_name">Vetfind</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vetfind">VetFind</string>
    <string name="search">Поиск</string>
    <string name="brands">Бренды</string>
    <string name="pharmacies">Аптеки</string>
    <string name="stocks">Акции</string>
    <string name="articles">Статьи</string>
    <string name="amount">Цена</string>
    <string name="distance">Расстояние</string>
    <string name="sort_by">Сортировка по</string>
    <string name="no_data">Нет данных</string>
    <string name="not_found">Не найдено</string>
    <string name="try_again_later">Повторите попытку позже</string>
    <string name="internet_is_not_connected">Интернет-соединение не подключен</string>
    <string name="map">Карта</string>
    <string name="brand">Бренд</string>
    <string name="count">Количество</string>
    <string name="bulk">Масса</string>
    <string name="isOpenNow">Работающие в данный момент</string>
</resources>